--- a/package.yaml
+++ b/package.yaml
@@ -45,15 +45,25 @@ library:
   source-dirs: src
 
 executables:
-  dbg-exe:
+  monster:
     main:                Main.hs
-    source-dirs:         app
+    source-dirs:         app/monster
     ghc-options:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
     - dbg
+  sg:
+    main:                Main.hs
+    source-dirs:         app/sg
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - dbg
+
 
 tests:
   dbg-test:
