--- a/package.yaml
+++ b/package.yaml
@@ -54,6 +54,15 @@ executables:
     - -with-rtsopts=-N
     dependencies:
     - dbg
+  game:
+    main:                Main.hs
+    source-dirs:         app/game
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - dbg
   sg:
     main:                Main.hs
     source-dirs:         app/sg
