--- a/package.yaml
+++ b/package.yaml
@@ -72,6 +72,16 @@ executables:
     - -with-rtsopts=-N
     dependencies:
     - dbg
+  descent:
+    main:                Main.hs
+    source-dirs:         app/descent
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - dbg
+
 
 
 tests:
