--- a/package.yaml
+++ b/package.yaml
@@ -90,6 +90,15 @@ executables:
     - -with-rtsopts=-N
     dependencies:
     - dbg
+  thering:
+    main:                Main.hs
+    source-dirs:         app/thering
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - dbg
 
 
 
