starting with flying pig

--- a/dbg.cabal
+++ b/dbg.cabal
@@ -35,6 +35,7 @@ library
       DeBruijnGraph
       Descent
       DeterminismProperty
+      FlyingPig
       Function
       Game
       Gathering
