--- a/package.yaml
+++ b/package.yaml
@@ -45,9 +45,27 @@ library:
   source-dirs: src
 
 executables:
-  report:
+  cayrep:
     main:                Main.hs
-    source-dirs:         app/report
+    source-dirs:         app/cayrep
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - dbg
+  spirep:
+    main:                Main.hs
+    source-dirs:         app/spirep
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - dbg
+  spiral:
+    main:                Main.hs
+    source-dirs:         app/spiral
     ghc-options:
     - -threaded
     - -rtsopts
@@ -57,15 +75,6 @@ executables:
   game:
     main:                Main.hs
     source-dirs:         app/game
-    ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
-    dependencies:
-    - dbg
-  sg:
-    main:                Main.hs
-    source-dirs:         app/sg
     ghc-options:
     - -threaded
     - -rtsopts
