--- a/package.yaml
+++ b/package.yaml
@@ -90,6 +90,16 @@ executables:
     - -with-rtsopts=-N
     dependencies:
     - dbg
+  covering:
+    main:                Main.hs
+    source-dirs:         app/covering
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    - -O2
+    dependencies:
+    - dbg
 
 
 
