writing basic SearchTree functionality

--- a/dbg.cabal
+++ b/dbg.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.35.0.
+-- This file has been generated from package.yaml by hpack version 0.35.1.
 --
 -- see: https://github.com/sol/hpack
 
@@ -59,6 +59,7 @@ library
       RelationTree
       Report
       Search
+      SearchTree
       SmartSearch
       Spiral
       Tools
