added tests for SearchTree and fixing bug

--- a/dbg.cabal
+++ b/dbg.cabal
@@ -211,6 +211,7 @@ test-suite dbg-test
       HomomorphismSpec
       LiftedSpec
       MapGraphSpec
+      SearchTreeSpec
       WordSpec
       Paths_dbg
   hs-source-dirs:
