added tests to covering node
The tests check the property that the address of a node is always equal
to the revers of the labes on the full path down from the node.

--- a/package.yaml
+++ b/package.yaml
@@ -109,6 +109,15 @@ executables:
     - -O2
     dependencies:
     - dbg
+  play:
+    main:                Main.hs
+    source-dirs:         app/play
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - dbg
 
 
 
