--- a/dbg.cabal
+++ b/dbg.cabal
@@ -123,6 +123,25 @@ executable cayrep
     , vector
   default-language: Haskell2010
 
+executable count
+  main-is: Main.hs
+  other-modules:
+      Paths_dbg
+  hs-source-dirs:
+      app/count
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -O0 -threaded -rtsopts -with-rtsopts=-N -O2
+  build-depends:
+      base >=4.7 && <5
+    , containers
+    , data-ordlist
+    , dbg
+    , extra
+    , hspec
+    , mtl
+    , set-extra
+    , vector
+  default-language: Haskell2010
+
 executable dbg
   main-is: Main.hs
   other-modules:
