hacked together hairy powerGraph weight computations

--- a/dbg.cabal
+++ b/dbg.cabal
@@ -121,6 +121,7 @@ test-suite dbg-test
       CayleyGraphSpec
       ConciseGraphSpec
       ConstructibleSpec
+      ConstructionGraphSpec
       CoveringGraphSpec
       HomomorphismSpec
       ListWordSpec
