--- a/dbg.cabal
+++ b/dbg.cabal
@@ -128,6 +128,7 @@ test-suite dbg-test
       MapGraphSpec
       PlanSpec
       SearchTreeSpec
+      SpiralSpec
       TurningVectorSpec
       WordMapSpec
       Paths_dbg
